javafx config gix